--- a/templates/resources/duplo_service.md.tmpl
+++ b/templates/resources/duplo_service.md.tmpl
@@ -316,6 +316,23 @@ resource "duplocloud_duplo_service" "nginx" {
 }
 ```
 
+# Example to run pod on Fargate
+```
+resource "duplocloud_duplo_service" "myservice" {
+  tenant_id = data.duplocloud_tenant.tenant.id
+
+  name           = "myservice"
+  agent_platform = 7 # Duplo native container agent
+  docker_image   = "nginx:latest"
+  replicas       = 1
+  other_docker_config = jsonencode(
+    {
+      "PodLabels" : {
+        "configure.duplocloud.net/run-on" = "fargate"
+      }
+  })
+}
+```
 {{ .SchemaMarkdown | trimspace }}
 
 ## Import
